home/home.css
/* ... */
.movie-facts-container h3 {
  font-family: "SF Pro", sans-serif;
  font-size: 2rem;
  margin-bottom: 5px;
}

#movieFact {
  font-family: "SF Medium", sans-serif;
  font-size: 1.3rem;
  margin-bottom: 25px;
  margin-top: 0px;
  text-align: center;
  color: #ddd;
  opacity: 0.9;

}

#factBtn {
  padding: 12px 25px;
  background: #00268f;
  border: none;
  color: white;
  font-family: "SF Medium", sans-serif;
  border-radius: 25px;
  cursor: pointer;
  transition: 0.3s ease;
}

#factBtn:hover {
  background: #0046f6;
  transform: scale(1.05);
}


/* Mobile */
@media (max-width: 600px) {
  .movie-mood-weather {
    padding: 40px 20px;
  }

  .weather-left h2 {
    font-size: 1.7rem;
  }

  #refreshMoodBtn {
    width: 100%;
  }

  .movie-card {
    width: 120px;
  }
}




/* ===================== RESPONSIVE ALL ===================== */
/* ANIMATIONS */
@keyframes bounce {
  0%, 100% { transform: translateY(0); }
  50% { transform: translateY(10px); }
}

/* RESPONSIVE */
@media (max-width: 1366px) {
  .title { font-size: 5rem; }
  .subtitle { font-size: 1rem; }
  .logo { width: 70px; }
}

@media (max-width: 1024px) {
  .dashboard-content { flex-direction: column; }
  .dashboard-info, .dashboard-data { flex: 1 1 100%; }
}

